--- a/src/main/resources/templates/nurse/home.html
+++ b/src/main/resources/templates/nurse/home.html
@@ -41,8 +41,7 @@
                                     <img th:src="@{/assets/images/calendar.png}" width="59" alt="My Logo">
                                     </h6>
                                 </div>
-                                <div
-                                    style="background-color: #f9f9f9;padding:1rem; width:13rem;border-radius: 10px 0px 0px 10px;">
+                                <div style="background-color: #f9f9f9;padding:1rem; width:13rem;border-radius: 10px 0px 0px 10px;">
                                     <h5 th:text="${#temporals.format(today, 'yyyy-MM-dd')}">2022-05-26</h5>
                                     <h4 class="fw-bold" th:text="${#temporals.format(today, 'hh:mm')}">17:50</h4>
                                 </div>
