--- a/src/main/resources/templates/doctor/patient/info.html
+++ b/src/main/resources/templates/doctor/patient/info.html
@@ -19,10 +19,8 @@
                 <div class="col py-3 container" style="margin-left:100px;margin-right:100px;margin-top:60px">
                     <div style="border-bottom:1px solid rgb(197, 197, 197);padding-bottom: 0px;">
                         <h3 class=" fw-bold mb-2" style="display:inline-block;margin-bottom:-20px">환자기본정보 조회 </h3>
-                        <h6
-                            style="display:inline-block;color:rgb(165, 165, 165); float: right;padding-top:15px; font-size:11px">
-                            HOME> doctor>
-                            환자기본정보 조회
+                        <h6 style="display:inline-block;color:rgb(165, 165, 165); float: right;padding-top:15px; font-size:11px">
+                            HOME> doctor> 환자기본정보 조회
                         </h6>
                     </div>
                     <!--글씨 위치조정을 위한 css-->
